# remodule

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  conanfile.py
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: STYLE.md
include/remodule/: context_loader.hpp  context_module_interface.hpp  library.hpp  library_fwd.hpp  loader.hpp  module_interface.hpp  module_interface_fwd.hpp  remodule.hpp
source/remodule/: library.cpp  loader.cpp  module_interface.cpp  remodule.cpp
test/: CMakeLists.txt
test/source/: common.hpp  remodule_test.cpp  test_module_a.cpp  test_module_b.cpp
